Don't try to delete an item if there isn't one.

BUG:143412

svn path=/branches/KDE/3.5/kdegraphics/kuickshow/; revision=646111